k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siemens-settings-ingress
  namespace: siemens-project-settings
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: settings.siemens.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: siemens-settings-service
                port:
                  number: 80
